--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -28,6 +28,17 @@
       justify-content: center;
       padding: 5px;
       margin-bottom: 0; }
+    header .cover-img {
+      z-index: -1; }
+
+  main.menu {
+    border-top-left-radius: 35px;
+    border-top-right-radius: 35px;
+    z-index: 999;
+    margin-top: -35px; }
+    main.menu h1.shrikhand {
+      padding: 30px 10px 20px 10px;
+      font-size: 1.5rem; }
 
   aside .select {
     display: flex;
