--- a/assets/scss/media.scss
+++ b/assets/scss/media.scss
@@ -45,6 +45,24 @@
       padding: 5px;
       margin-bottom: 0;
     }
+
+    .cover-img {
+      z-index: -1;
+    }
+  }
+
+  main {
+    &.menu {
+      border-top-left-radius: 35px;
+      border-top-right-radius: 35px;
+      z-index: 999;
+      margin-top: -35px;
+
+      h1.shrikhand {
+        padding: 30px 10px 20px 10px;
+        font-size: 1.5rem;
+      }
+    }
   }
 
   aside {
