--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,7 +93,8 @@ header {
   margin: auto;
   flex-flow: wrap;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  position: relative; }
   header .header-left {
     width: 375px; }
   header .search-location {
@@ -107,6 +108,11 @@ header {
       header .search-location .input-field input {
         border: none;
         background-color: transparent; }
+  header .back-btn {
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    display: block; }
   header .cover-img .cover-img img {
     object-fit: cover; }
 
@@ -259,8 +265,17 @@ aside {
           transition: all 0.5s 0s ease;
           color: #9356dc; }
 
+.menu .cards h2.sub-title {
+  font-size: 1rem;
+  font-weight: normal; }
+  .menu .cards h2.sub-title:after {
+    border-bottom: 2px solid #99e2d0;
+    content: "";
+    display: block;
+    width: 10%;
+    padding-top: 3px; }
 .menu .cards .card {
-  margin: 15px 0;
+  margin: 10px 0;
   border-radius: 15px; }
   .menu .cards .card hgroup {
     padding: 10px; }
@@ -276,6 +291,16 @@ aside {
     float: right;
     font-weight: bold;
     font-size: 1.125rem; }
+.menu .button1 button {
+  background: linear-gradient(#ff79da, #9356dc);
+  color: #fff;
+  border-radius: 25px;
+  padding: 15px;
+  font-weight: bold;
+  box-shadow: 2px 2px 10px 2px #e0e0e0; }
+.menu .order {
+  text-align: center;
+  margin-bottom: 20px; }
 
 footer {
   padding: 20px;
