--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -112,6 +112,7 @@ header {
   flex-flow: wrap;
   flex-direction: column;
   align-items: center;
+  position: relative;
 
   .header-left {
     width: 375px;
@@ -135,6 +136,14 @@ header {
       }
     }
   }
+
+  .back-btn {
+    position: absolute;
+    left: 20px;
+    top: 20px;
+    display: block;
+  }
+
   .cover-img {
     .cover-img {
       img {
@@ -315,7 +324,6 @@ aside {
     }
 
 
-
     h2 {
       font-weight: bold;
     }
@@ -360,12 +368,24 @@ aside {
 }
 
 
-
 //Menu cards CSS
 .menu {
   .cards {
+    h2.sub-title {
+      font-size: 1rem;
+      font-weight: normal;
+
+      &:after {
+        border-bottom: 2px solid #99e2d0;
+        content: "";
+        display: block;
+        width: 10%;
+        padding-top: 3px;
+      }
+    }
+
     .card {
-      margin: 15px 0;
+      margin: 10px 0;
       border-radius: 15px;
 
       hgroup {
@@ -376,18 +396,35 @@ aside {
         font-size: 1.125rem;
         margin: 0 0 5px 0;
       }
+
       h2 {
         font-size: 1rem;
         font-weight: normal;
         display: inline-block;
         color: gray;
       }
+
       .price {
         float: right;
         font-weight: bold;
         font-size: 1.125rem;
       }
     }
+  }
+
+  .button1 button {
+    background: linear-gradient($secondary, $primary);
+    color: #fff;
+    border-radius: 25px;
+    padding: 15px;
+    font-weight: bold;
+    box-shadow: 2px 2px 10px 2px #e0e0e0;
+  }
+
+  //Order button
+  .order {
+    text-align: center;
+    margin-bottom: 20px;
   }
 }
 
@@ -407,18 +444,20 @@ footer {
       filter: invert(1);
     }
   }
+
   .col-3 {
     display: flex;
     flex-direction: column;
   }
+
   .one {
     flex: 1 0 50%;
   }
 
   .footer-icon {
-      i {
-        min-width: 30px;
-      }
+    i {
+      min-width: 30px;
+    }
   }
 
   a {
