--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -39,6 +39,12 @@
     main.menu h1.shrikhand {
       padding: 30px 10px 20px 10px;
       font-size: 1.5rem; }
+    main.menu .card {
+      margin: 10px 0;
+      border-radius: 15px;
+      cursor: pointer;
+      display: flex;
+      flex-direction: row; }
 
   aside .select {
     display: flex;
