--- a/assets/scss/media.scss
+++ b/assets/scss/media.scss
@@ -62,6 +62,14 @@
         padding: 30px 10px 20px 10px;
         font-size: 1.5rem;
       }
+
+      .card {
+        margin: 10px 0;
+        border-radius: 15px;
+        cursor: pointer;
+        display: flex;
+        flex-direction: row;
+      }
     }
   }
 
