--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -68,6 +68,7 @@ h1 {
 
   &.shrikhand {
     font-family: Shrikhand, sans-serif;
+    padding: 20px 0 20px 20px;
   }
 }
 
@@ -113,6 +114,7 @@ header {
   flex-direction: column;
   align-items: center;
   position: relative;
+  z-index: -1;
 
   .header-left {
     width: 375px;
@@ -145,19 +147,29 @@ header {
   }
 
   .cover-img {
-    .cover-img {
-      img {
-        object-fit: cover;
-      }
+    height: 350px;
+    width: 100%;
+
+
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
     }
   }
 }
 
 main {
   max-width: 1680px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   flex-wrap: wrap;
+  z-index: 999;
+  margin-top: -40px;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+
 }
 
 .reserve {
@@ -371,9 +383,16 @@ aside {
 //Menu cards CSS
 .menu {
   .cards {
+    background-color: transparent;
+    flex-flow: row wrap;
+    margin-right: 0;
+    margin-left: 0;
+
+
     h2.sub-title {
       font-size: 1rem;
       font-weight: normal;
+      width: 100%;
 
       &:after {
         border-bottom: 2px solid #99e2d0;
@@ -385,11 +404,15 @@ aside {
     }
 
     .card {
-      margin: 10px 0;
+      //margin: 10px 0;
       border-radius: 15px;
+      cursor: pointer;
+      display: flex;
+      flex-direction: row;
 
       hgroup {
         padding: 10px;
+        flex: 0 0 100%;
       }
 
       h1 {
@@ -402,6 +425,74 @@ aside {
         font-weight: normal;
         display: inline-block;
         color: gray;
+      }
+
+      .caption-check-box {
+        width: 30px;
+        position: relative;
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+        display: none;
+
+        i {
+          font-size: 24px;
+          color: #fff;
+        }
+      }
+
+      //.caption-check-box {
+      //  animation: caption-check-box ease 0.3s;
+      //  animation-iteration-count: 1;
+      //  transform-origin: 50% 50%;
+      //  animation-fill-mode: forwards;
+      //  overflow: hidden;
+      //}
+
+
+
+
+      &:hover {
+        hgroup {
+          flex: 0 0 90%;
+          transform: scaleY(1);
+        }
+
+        .caption-check-box {
+          display: block;
+          flex: 0 0 10%;
+          background-color: $tertiary;
+
+          animation: caption-check-box ease 0.3s;
+          animation-iteration-count: 1;
+          transform-origin: 50% 50%;
+          animation-fill-mode: forwards;
+          overflow: hidden;
+
+
+          i {
+            position: absolute;
+            top: 30%;
+            left: 30%;
+          }
+
+          @keyframes caption-check-box {
+            0% {
+              opacity: 0;
+              transform: translate(30px, 0px);
+            }
+            60% {
+              opacity: 1;
+              transform: translate(5px, 0px);
+            }
+            80% {
+              transform: translate(-10px, 0px);
+            }
+            100% {
+              opacity: 1;
+              transform: translate(0px, 0px);
+            }
+          }
+        }
       }
 
       .price {
@@ -461,6 +552,6 @@ footer {
   }
 
   a {
-    color: #fff !important;
+    color: #fff;
   }
 }
