Add compiled css

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,3 +1,7 @@
+@media screen and (max-width: 1024px) {
+  aside .select {
+    flex-flow: column;
+    flex-direction: column; } }
 @media screen and (max-width: 768px) {
   aside .select {
     flex-flow: column;
@@ -35,11 +39,11 @@
     border-top-left-radius: 35px;
     border-top-right-radius: 35px;
     z-index: 999;
-    margin-top: -35px; }
+    margin-top: -50px; }
     main.menu h1.shrikhand {
-      padding: 30px 10px 20px 10px;
+      padding: 30px 10px 20px 15px;
       font-size: 1.5rem; }
-    main.menu .card {
+    main.menu .cards .card {
       margin: 10px 0;
       border-radius: 15px;
       cursor: pointer;
