--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,13 +43,13 @@ body {
   font-size: 0.875rem;
   line-height: 1.5;
   text-align: left;
-  background-color: white; }
+  background-color: white;
+  color: #333; }
 
 a {
   color: #333; }
-
-a:visited {
-  color: inherit; }
+  a:visited {
+    color: inherit; }
 
 h1 {
   font-size: 1.5rem;
@@ -95,8 +95,7 @@ header {
   flex-flow: wrap;
   flex-direction: column;
   align-items: center;
-  position: relative;
-  z-index: -1; }
+  position: relative; }
   header .header-left {
     width: 375px; }
   header .search-location {
@@ -116,8 +115,9 @@ header {
     top: 20px;
     display: block; }
   header .cover-img {
-    height: 350px;
-    width: 100%; }
+    height: 270px;
+    width: 100%;
+    z-index: -1; }
     header .cover-img img {
       height: 100%;
       width: 100%;
@@ -128,7 +128,9 @@ main {
   margin-left: auto;
   margin-right: auto;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+.menu main {
   z-index: 999;
   margin-top: -40px;
   border-top-left-radius: 30px;
@@ -149,7 +151,12 @@ main {
     border-radius: 25px;
     padding: 15px;
     font-weight: bold;
-    box-shadow: 2px 2px 10px 2px #e0e0e0; }
+    box-shadow: 2px 2px 10px 2px #e0e0e0;
+    cursor: pointer;
+    border: none; }
+    .reserve button:hover {
+      box-shadow: 2px 2px 10px 2px #bcbcbc;
+      background: linear-gradient(#ff93e1, #a16be0); }
 
 aside {
   padding: 30px 10px;
@@ -195,7 +202,7 @@ aside {
       aside .step-button .icon i {
         font-size: 20px; }
     aside .step-button .link-text {
-      font-weight: 900; }
+      font-weight: bold; }
     aside .step-button.active {
       background-color: #f2eafb;
       box-shadow: 2px 2px 10px 2px #f2eafb; }
@@ -277,6 +284,31 @@ aside {
           transition: all 0.5s 0s ease;
           color: #9356dc; }
 
+.menu .restaurant-title {
+  width: 100%;
+  position: relative; }
+  .menu .restaurant-title .like {
+    position: absolute;
+    right: 30px;
+    top: 25px; }
+    .menu .restaurant-title .like .hover-icon {
+      display: none; }
+    .menu .restaurant-title .like i {
+      font-size: 24px;
+      color: #888888;
+      left: 50%; }
+    .menu .restaurant-title .like:hover {
+      overflow: hidden;
+      cursor: pointer; }
+      .menu .restaurant-title .like:hover .default-icon {
+        opacity: 0;
+        display: none;
+        transition: all 0.5s 0s ease; }
+      .menu .restaurant-title .like:hover .hover-icon {
+        opacity: 1;
+        display: unset;
+        transition: all 0.5s 0s ease;
+        color: #9356dc; }
 .menu .cards {
   background-color: transparent;
   flex-flow: row wrap;
@@ -290,26 +322,29 @@ aside {
       border-bottom: 2px solid #99e2d0;
       content: "";
       display: block;
-      width: 10%;
+      width: 40px;
       padding-top: 3px; }
   .menu .cards .card {
     border-radius: 15px;
     cursor: pointer;
     display: flex;
-    flex-direction: row; }
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: nowrap; }
     .menu .cards .card hgroup {
       padding: 10px;
-      flex: 0 0 100%; }
+      flex: 1 0 0%; }
     .menu .cards .card h1 {
       font-size: 1.125rem;
       margin: 0 0 5px 0; }
     .menu .cards .card h2 {
       font-size: 1rem;
       font-weight: normal;
-      display: inline-block;
-      color: gray; }
+      color: gray;
+      text-overflow: ellipsis;
+      white-space: normal;
+      overflow: hidden; }
     .menu .cards .card .caption-check-box {
-      width: 30px;
       position: relative;
       border-top-right-radius: 15px;
       border-bottom-right-radius: 15px;
@@ -317,43 +352,19 @@ aside {
       .menu .cards .card .caption-check-box i {
         font-size: 24px;
         color: #fff; }
-    .menu .cards .card:hover hgroup {
-      flex: 0 0 90%;
-      transform: scaleY(1); }
-    .menu .cards .card:hover .caption-check-box {
-      display: block;
-      flex: 0 0 10%;
-      background-color: #99e2d0;
-      animation: caption-check-box ease 0.3s;
-      animation-iteration-count: 1;
-      transform-origin: 50% 50%;
-      animation-fill-mode: forwards;
-      overflow: hidden; }
-      .menu .cards .card:hover .caption-check-box i {
-        position: absolute;
-        top: 30%;
-        left: 30%; }
-@keyframes caption-check-box {
-  0% {
-    opacity: 0;
-    transform: translate(30px, 0px); }
-  60% {
-    opacity: 1;
-    transform: translate(5px, 0px); }
-  80% {
-    transform: translate(-10px, 0px); }
-  100% {
-    opacity: 1;
-    transform: translate(0px, 0px); } }
     .menu .cards .card .price {
-      float: right;
       font-weight: bold;
-      font-size: 1.125rem; }
+      font-size: 1.125rem;
+      flex: 0 0 auto;
+      text-align: right;
+      padding-right: 10px;
+      display: flex;
+      align-items: center; }
 .menu .button1 button {
   background: linear-gradient(#ff79da, #9356dc);
   color: #fff;
   border-radius: 25px;
-  padding: 15px;
+  padding: 15px 30px;
   font-weight: bold;
   box-shadow: 2px 2px 10px 2px #e0e0e0; }
 .menu .order {
@@ -377,6 +388,6 @@ footer {
   footer .footer-icon i {
     min-width: 30px; }
   footer a {
-    color: #fff; }
+    color: #fff !important; }
 
 /*# sourceMappingURL=style.css.map */
