--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,6 +10,12 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   text-decoration: none;
 }
 
+*:focus {
+  outline-style: none;
+  box-shadow: none;
+  border-color: transparent;
+}
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
