Fix media scss menu main class

--- a/assets/scss/media.scss
+++ b/assets/scss/media.scss
@@ -58,8 +58,8 @@
     }
   }
 
-  main {
-    &.menu {
+  .menu {
+    main {
       border-top-left-radius: 35px;
       border-top-right-radius: 35px;
       z-index: 999;
