Fix W3C validator error <button> in <a>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ h3 {
 .full-width {
   width: 100%; }
 
-.button1 button {
+.button1 {
   display: inline-block;
   padding: 0.35em 1.2em;
   border: 0.1em solid #FFFFFF;
@@ -154,7 +154,7 @@ main {
     font-weight: normal; }
   .reserve hgroup {
     margin-bottom: 20px; }
-  .reserve button {
+  .reserve .button1 {
     background: linear-gradient(#ff79da, #9356dc);
     color: #fff;
     border-radius: 25px;
@@ -163,7 +163,7 @@ main {
     box-shadow: 2px 2px 10px 2px #e0e0e0;
     cursor: pointer;
     border: none; }
-    .reserve button:hover {
+    .reserve .button1:hover {
       box-shadow: 2px 2px 10px 2px #bcbcbc;
       background: linear-gradient(#ff93e1, #a16be0); }
 
@@ -369,7 +369,7 @@ aside {
       padding-right: 10px;
       display: flex;
       align-items: center; }
-.menu .button1 button {
+.menu .button1 {
   background: linear-gradient(#ff79da, #9356dc);
   color: #fff;
   border-radius: 25px;
