--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -101,7 +101,7 @@ h3 {
   width: 100%;
 }
 
-.button1 button {
+.button1 {
   display: inline-block;
   padding: 0.35em 1.2em;
   border: 0.1em solid #FFFFFF;
@@ -204,7 +204,7 @@ main {
     margin-bottom: 20px;
   }
 
-  button {
+  .button1 {
     background: linear-gradient($secondary, $primary);
     color: #fff;
     border-radius: 25px;
@@ -523,7 +523,7 @@ aside {
     }
   }
 
-  .button1 button {
+  .button1 {
     background: linear-gradient($secondary, $primary);
     color: #fff;
     border-radius: 25px;
