--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,4 +1,16 @@
+//Colors
 $primary: #9356dc;
 $secondary: #ff79da;
 $tertiary: #99e2d0;
 $grey-color: #f6f6f6;
+
+//Width
+$wrapper: 1440px;
+
+//Buttons
+$btn1-color: linear-gradient($secondary, $primary);
+$btn1-shadow: 2px 2px 10px 2px #e0e0e0;
+$btn-padding: 15px 30px;
+
+//Animations
+$card-delay: 0.3s;
