--- a/assets/css/animations.css
+++ b/assets/css/animations.css
@@ -1,3 +1,8 @@
+.menu main .cards .card:hover hgroup {
+  width: auto;
+  display: grid; }
+.menu main .cards .card:hover .price {
+  min-width: 50px; }
 .menu main .cards .card:hover .caption-check-box {
   display: block;
   flex: 0 0 15%;
@@ -10,18 +15,84 @@
   .menu main .cards .card:hover .caption-check-box i {
     position: absolute;
     top: 30%;
-    left: 30%; }
-@keyframes caption-check-box {
+    left: 30%;
+    animation-iteration-count: 1;
+    animation: check-box ease 0.25s; }
+@keyframes check-box {
   0% {
-    opacity: 0;
-    transform: translate(30px, 0px); }
-  60% {
-    opacity: 1;
-    transform: translate(5px, 0px); }
-  80% {
-    transform: translate(-10px, 0px); }
+    opacity: 0.5;
+    transform: rotate(-90deg); }
+  40% {
+    opacity: 0.7;
+    transform: rotate(-55deg); }
+  70% {
+    opacity: 0.8;
+    transform: rotate(-30deg); }
   100% {
     opacity: 1;
-    transform: translate(0px, 0px); } }
+    transform: rotate(5deg); } }
+@keyframes caption-check-box {
+  0% {
+    opacity: 0.4;
+    transform: translate(15px, 0px); }
+  40% {
+    opacity: 0.6;
+    transform: translate(10px, 0px); }
+  70% {
+    opacity: 0.8;
+    transform: translate(6px, 0px); }
+  100% {
+    opacity: 1;
+    transform: translate(1px, 0px); } }
+.fade-1 {
+  animation: fadein 0.3s; }
+
+.fade-2 {
+  animation: fadein 0.6s; }
+
+.fade-3 {
+  animation: fadein 0.9s; }
+
+.fade-4 {
+  animation: fadein 1.2s; }
+
+.fade-5 {
+  animation: fadein 1.5s; }
+
+.fade-6 {
+  animation: fadein 1.8s; }
+
+.fade-7 {
+  animation: fadein 2.1s; }
+
+.fade-8 {
+  animation: fadein 2.4s; }
+
+.fade-9 {
+  animation: fadein 2.7s; }
+
+.fade-10 {
+  animation: fadein 3s; }
+
+.fade-11 {
+  animation: fadein 3.3s; }
+
+.fade-12 {
+  animation: fadein 3.6s; }
+
+.fade-13 {
+  animation: fadein 3.9s; }
+
+.fade-14 {
+  animation: fadein 4.2s; }
+
+.fade-15 {
+  animation: fadein 4.5s; }
+
+@keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 
 /*# sourceMappingURL=animations.css.map */
