--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,7 +1,15 @@
 @media screen and (max-width: 1024px) {
   aside .select {
     flex-flow: column;
-    flex-direction: column; } }
+    flex-direction: column; }
+
+  .cards {
+    margin-right: 0;
+    margin-left: 0;
+    flex-flow: column; }
+    .cards > .card {
+      margin-bottom: 15px;
+      flex: 1 0 33%; } }
 @media screen and (max-width: 768px) {
   aside .select {
     flex-flow: column;
@@ -13,7 +21,7 @@
     flex-flow: column; }
     .cards > .card {
       margin-bottom: 15px;
-      flex: 1 0 0%; } }
+      flex: 1 0 33%; } }
 @media all and (max-width: 576px) {
   header {
     flex-flow: column; }
