--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,8 @@ h1 {
   line-height: 1; }
   h1.shrikhand {
     font-family: Shrikhand, sans-serif;
-    padding: 20px 0 20px 20px; }
+    padding: 20px 0 20px 20px;
+    font-weight: normal; }
 
 h2 {
   display: block;
@@ -83,19 +84,31 @@ h3 {
 
 .button1 {
   display: inline-block;
-  padding: 0.35em 1.2em;
-  border: 0.1em solid #FFFFFF;
+  padding: 15px 30px;
   margin: 0 0.3em 0.3em 0;
-  border-radius: 0.12em;
+  border-radius: 25px;
   box-sizing: border-box;
   text-decoration: none;
-  font-weight: 300;
   text-align: center;
-  transition: all 0.2s; }
+  transition: all 0.2s;
+  background: linear-gradient(#ff79da, #9356dc);
+  color: #fff;
+  font-weight: bold;
+  box-shadow: 2px 2px 10px 2px #e0e0e0;
+  cursor: pointer;
+  border: none;
+  transform: scale(1); }
+  .button1:hover {
+    box-shadow: 2px 2px 10px 2px #bcbcbc;
+    background: linear-gradient(#ff93e1, #a16be0);
+    transform: scale(1.05); }
+
+a.button1 {
+  color: #fff; }
 
 header {
   display: flex;
-  max-width: 1680px;
+  max-width: 1440px;
   margin: auto;
   flex-flow: wrap;
   flex-direction: column;
@@ -131,7 +144,7 @@ header {
       object-fit: cover; }
 
 main {
-  max-width: 1680px;
+  max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -154,24 +167,10 @@ main {
     font-weight: normal; }
   .reserve hgroup {
     margin-bottom: 20px; }
-  .reserve .button1 {
-    background: linear-gradient(#ff79da, #9356dc);
-    color: #fff;
-    border-radius: 25px;
-    padding: 15px;
-    font-weight: bold;
-    box-shadow: 2px 2px 10px 2px #e0e0e0;
-    cursor: pointer;
-    border: none; }
-    .reserve .button1:hover {
-      box-shadow: 2px 2px 10px 2px #bcbcbc;
-      background: linear-gradient(#ff93e1, #a16be0); }
 
 aside {
   padding: 30px 10px;
-  flex: 0 0 100%;
-  display: flex;
-  flex-wrap: wrap; }
+  flex: 0 0 100%; }
   aside h1 {
     width: 100%; }
   aside .select {
@@ -212,10 +211,10 @@ aside {
         font-size: 20px; }
     aside .step-button .link-text {
       font-weight: bold; }
-    aside .step-button.active {
+    aside .step-button:hover {
       background-color: #f2eafb;
-      box-shadow: 2px 2px 10px 2px #f2eafb; }
-      aside .step-button.active .icon {
+      box-shadow: 2px 2px 10px 2px #e4d5f6; }
+      aside .step-button:hover .icon {
         color: #9356dc; }
 
 .cards {
@@ -238,7 +237,7 @@ aside {
     word-wrap: break-word;
     background-color: white;
     box-shadow: 2px 2px 10px 2px #e0e0e0;
-    flex: 1 0 0%;
+    flex: 1 0 25%;
     margin: 15px; }
     .cards .card.card-img {
       border-radius: 15px; }
@@ -339,19 +338,23 @@ aside {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    flex-wrap: nowrap; }
+    flex-wrap: nowrap;
+    overflow: hidden; }
     .menu .cards .card hgroup {
       padding: 10px;
       flex: 1 0 0%; }
-    .menu .cards .card h1 {
-      font-size: 1.125rem;
-      margin: 0 0 5px 0; }
     .menu .cards .card h2 {
+      font-size: 1.125rem;
+      margin: 0 0 5px 0;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden; }
+    .menu .cards .card h3 {
       font-size: 1rem;
       font-weight: normal;
       color: gray;
       text-overflow: ellipsis;
-      white-space: normal;
+      white-space: nowrap;
       overflow: hidden; }
     .menu .cards .card .caption-check-box {
       position: relative;
@@ -360,7 +363,8 @@ aside {
       display: none; }
       .menu .cards .card .caption-check-box i {
         font-size: 24px;
-        color: #fff; }
+        color: #fff;
+        transform: rotate(360deg); }
     .menu .cards .card .price {
       font-weight: bold;
       font-size: 1.125rem;
@@ -373,6 +377,7 @@ aside {
   background: linear-gradient(#ff79da, #9356dc);
   color: #fff;
   border-radius: 25px;
+  border: none;
   padding: 15px 30px;
   font-weight: bold;
   box-shadow: 2px 2px 10px 2px #e0e0e0; }
