--- a/assets/scss/animations.scss
+++ b/assets/scss/animations.scss
@@ -5,6 +5,15 @@
   .cards {
     .card {
       &:hover {
+        hgroup {
+          width: auto;
+          display: grid;
+        }
+
+        .price {
+          min-width: 50px;
+        }
+
         .caption-check-box {
           display: block;
           flex: 0 0 15%;
@@ -21,23 +30,46 @@
             position: absolute;
             top: 30%;
             left: 30%;
+            animation-iteration-count: 1;
+            animation: check-box ease 0.25s;
+
+
+            @keyframes check-box {
+              0% {
+                opacity: 0.5;
+                transform: rotate(-90deg);
+              }
+              40% {
+                opacity: 0.7;
+                transform: rotate(-55deg);
+              }
+              70% {
+                opacity: 0.8;
+                transform: rotate(-30deg);
+              }
+              100% {
+                opacity: 1;
+                transform: rotate(5deg);
+              }
+            }
           }
 
           @keyframes caption-check-box {
             0% {
-              opacity: 0;
-              transform: translate(30px, 0px);
+              opacity: 0.4;
+              transform: translate(15px, 0px);
             }
-            60% {
-              opacity: 1;
-              transform: translate(5px, 0px);
+            40% {
+              opacity: 0.6;
+              transform: translate(10px, 0px);
             }
-            80% {
-              transform: translate(-10px, 0px);
+            70% {
+              opacity: 0.8;
+              transform: translate(6px, 0px);
             }
             100% {
               opacity: 1;
-              transform: translate(0px, 0px);
+              transform: translate(1px, 0px);
             }
           }
         }
@@ -45,3 +77,50 @@
     }
   }
 }
+
+// Lazy
+@for $i from 1 through 15 {
+  .fade-#{$i} {
+    animation: fadein $card-delay*$i;
+    //-moz-animation: fadein $card-delay*$i; /* Firefox */
+    //-webkit-animation: fadein $card-delay*$i; /* Safari et Chrome */
+    //-o-animation: fadein $card-delay*$i; /* Opera */
+  }
+}
+
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+//
+//@-moz-keyframes fadein { /* sur Firefox */
+//  from {
+//    opacity: 0;
+//  }
+//  to {
+//    opacity: 1;
+//  }
+//}
+//
+//@-webkit-keyframes fadein { /* sur Safari et Chrome */
+//  from {
+//    opacity: 0;
+//  }
+//  to {
+//    opacity: 1;
+//  }
+//}
+//
+//@-o-keyframes fadein { /* sur Opera */
+//  from {
+//    opacity: 0;
+//  }
+//  to {
+//    opacity: 1;
+//  }
+//}
