Fix css and html fade class * Css hgroup media device * Add focus reset class * Change btn shadow * Add home class in body (home page)

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -57,6 +57,8 @@
       cursor: pointer;
       display: flex;
       flex-direction: row; }
+      .menu main .cards .card hgroup {
+        display: grid; }
 
   aside .select {
     display: flex;
