--- a/assets/scss/media.scss
+++ b/assets/scss/media.scss
@@ -87,6 +87,10 @@
           cursor: pointer;
           display: flex;
           flex-direction: row;
+
+          hgroup {
+            display: grid;
+          }
         }
       }
     }
