--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -9,7 +9,8 @@ $wrapper: 1440px;
 
 //Buttons
 $btn1-color: linear-gradient($secondary, $primary);
-$btn1-shadow: 2px 2px 10px 2px #e0e0e0;
+$btn1-shadow: 0px 5px 15px 0px darken($grey-color, 15);
+$btn1-shadow-hover: 0px 5px 15px 0px darken($grey-color, 20);
 $btn-padding: 15px 30px;
 
 //Animations
